--- a/terms/index.html
+++ b/terms/index.html
@@ -9,7 +9,7 @@
   <h1>Terms of Service</h1>
   <p>Last updated: 2026-02-22</p>
 
-  <h2>1. Service</h2>
+  <h2>1. Services </h2>
   <p>KOIN provides community and guide features for users interested in living/traveling in Korea.</p>
 
   <h2>2. User responsibilities</h2>
