--- a/terms/index.html
+++ b/terms/index.html
@@ -1,26 +1,277 @@
+```html
 <!doctype html>
-<html lang="ko">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Terms of Service - KOIN</title>
+  <meta name="description" content="KOIN Terms of Service (Effective Date: 2026-02-23, Version v1.1)" />
 </head>
-<body style="font-family: system-ui; max-width: 820px; margin: 40px auto; line-height: 1.6;">
-  <h1>Terms of Service</h1>
-  <p>Last updated: 2026-02-22</p>
+<body style="font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; max-width: 820px; margin: 40px auto; line-height: 1.6; padding: 0 16px;">
+  <header>
+    <h1 style="margin-bottom: 8px;">Terms of Service</h1>
+    <p style="margin-top: 0; color: #555;">
+      Effective Date: <strong>2026-02-23</strong> · Version: <strong>v1.1</strong>
+    </p>
+  </header>
 
-  <h2>1. Services </h2>
-  <p>KOIN provides community and guide features for users interested in living/traveling in Korea.</p>
+  <hr style="border: 0; border-top: 1px solid #e5e5e5; margin: 24px 0;" />
 
-  <h2>2. User responsibilities</h2>
-  <p>You agree not to misuse the service, violate laws, or infringe others’ rights.</p>
+  <section>
+    <h2>Article 1 (Purpose)</h2>
+    <p>
+      These Terms aim to define the rights and obligations of the Company and Members, responsibilities,
+      and other necessary matters related to the use of the Service.
+    </p>
+  </section>
 
-  <h2>3. Changes</h2>
-  <p>We may update these terms as needed. Continued use means you accept changes.</p>
+  <section>
+    <h2>Article 2 (Definitions)</h2>
+    <ol>
+      <li><strong>“Service”</strong> means the KOIN application and related services provided by the Company.</li>
+      <li><strong>“Member”</strong> means a person who agrees to these Terms and the Privacy Policy, registers for the Service, and uses the Service.</li>
+      <li><strong>“Account”</strong> means identifying information (email address or social login identifier via Kakao/Google) used to identify a Member and enable use of the Service.</li>
+      <li><strong>“Content”</strong> means any information or materials posted or uploaded by a Member within the Service, including posts, comments, replies, photos/images, links, likes, saves (scraps), comment likes, and other related activity.</li>
+      <li><strong>“Operational Policy”</strong> means community guidelines, reporting/sanction standards, and detailed operating rules announced within the Service or provided as separate documents.</li>
+      <li><strong>“AI Camera”</strong> means a feature that provides results such as translation, explanations, and information based on images or text uploaded/entered by Members.</li>
+    </ol>
+  </section>
 
-  <h2>4. Contact</h2>
-  <p>Email: <a href="mailto:team@koreainsider.kr">team@koreainsider.kr</a></p>
+  <section>
+    <h2>Article 3 (Posting and Amendment of the Terms)</h2>
+    <ol>
+      <li>The Company will make these Terms available so that Members can easily review them through the Service and/or the official website.</li>
+      <li>The Company may amend these Terms to the extent permitted by applicable laws.</li>
+      <li>
+        If the Company amends these Terms, it will notify Members of the effective date and the changes at least
+        <strong>7 days</strong> prior to the effective date. If the amendment is material or unfavorable to Members,
+        the Company may provide notice at least <strong>30 days</strong> in advance.
+      </li>
+      <li>
+        If a Member does not agree to the amended Terms, the Member may terminate the use agreement (withdraw).
+        If the Member does not explicitly express refusal, the Member will be deemed to have agreed to the amended Terms.
+      </li>
+    </ol>
+  </section>
 
-  <p><a href="/">Back to Home</a></p>
+  <section>
+    <h2>Article 4 (Formation and Restriction of the Use Agreement)</h2>
+    <ol>
+      <li>The use agreement is formed when a Member agrees to these Terms and the Privacy Policy and completes the registration process set by the Company (including Kakao/Google/Email login).</li>
+      <li>
+        The Company may refuse registration or terminate the use agreement after registration if any of the following apply:
+        <ul>
+          <li>Using another person’s information (name, account, etc.) without authorization</li>
+          <li>Providing false information</li>
+          <li>Substantially interfering with the operation of the Service or posing a risk of such interference</li>
+          <li>Any other case where the Company reasonably determines it is necessary</li>
+        </ul>
+      </li>
+    </ol>
+  </section>
+
+  <section>
+    <h2>Article 5 (Account Management)</h2>
+    <ol>
+      <li>Members are responsible for securely managing their Account information and must promptly notify the Company if unauthorized use is suspected.</li>
+      <li>Members may not transfer, lend, or share their Account with any third party.</li>
+    </ol>
+  </section>
+
+  <section>
+    <h2>Article 6 (Provision and Modification of the Service)</h2>
+    <ol>
+      <li>The Company provides services including Community, Curation, and AI Camera features.</li>
+      <li>The Company may change all or part of the Service as needed for operational or technical reasons, and will provide prior notice for material changes.</li>
+    </ol>
+  </section>
+
+  <section>
+    <h2>Article 7 (Member Obligations)</h2>
+    <ol>
+      <li>Members must comply with applicable laws, these Terms, the Operational Policy, and notices.</li>
+      <li>Members must not infringe upon the rights of others (including copyrights, portrait rights, trademarks, personal information, etc.) while using the Service.</li>
+      <li>Members must take care not to include their own or others’ personal information in posts.</li>
+    </ol>
+  </section>
+
+  <section>
+    <h2>Article 8 (Prohibited Activities)</h2>
+    <p>
+      Members must not engage in the following activities. Depending on the severity of the violation, the Company may take necessary measures such as
+      deleting/hiding Content, issuing warnings, suspending accounts, permanently banning accounts, or taking legal action.
+    </p>
+
+    <h3>(1) Illegal Activities / Rights Infringement</h3>
+    <ol>
+      <li>Posting, selling, distributing, or brokering information/items that violate applicable laws (illegal goods, illegal drugs/medicines, counterfeit products, illegal recordings, etc.)</li>
+      <li>Infringing intellectual property rights of others (copyright, trademark, patent, trade secrets, etc.), including unauthorized copying, reposting, or sharing illegal links</li>
+      <li>Infringing portrait/publicity rights (e.g., posting someone’s face or unauthorized recordings without permission)</li>
+    </ol>
+
+    <h3>(2) Personal Information / Privacy Infringement</h3>
+    <ol>
+      <li>Posting or distributing personal information of oneself or others, including real names, addresses, phone numbers, emails, bank account numbers, resident registration numbers, passport numbers, student/staff IDs, location data, or images of ID documents containing faces</li>
+      <li>Unauthorized disclosure of private life information (dating, health, family matters, etc.) or private conversations/DMs/emails</li>
+      <li>Doxxing or inducing identification by combining identifying information (e.g., nickname + school/company + photo)</li>
+      <li>Surveys, link誘导, or external form collection intended to gather personal information (including phishing)</li>
+    </ol>
+
+    <h3>(3) Defamation / Insults / Harassment / Hate &amp; Discrimination</h3>
+    <ol>
+      <li>Insulting or defaming individuals/groups, spreading false information, or harming reputations</li>
+      <li>Hate, discrimination, or incitement to violence (including based on race, nationality, gender, disability, religion, etc.)</li>
+      <li>Stalking, threats, sustained harassment, or encouraging group bullying</li>
+      <li>Content that encourages or glamorizes suicide/self-harm (except for sharing information to seek help)</li>
+    </ol>
+
+    <h3>(4) Obscene / Sexual / Harmful Content</h3>
+    <ol>
+      <li>Pornography, sexual exploitation materials, sexual content involving minors, or explicit depictions of sexual acts</li>
+      <li>Sexual harassment/sexual objectification or unwanted sexual remarks/requests</li>
+      <li>Excessively provocative images/text that may cause discomfort (subject to the Operational Policy)</li>
+    </ol>
+
+    <h3>(5) Fraud / Deception / Spam / Advertising</h3>
+    <ol>
+      <li>Fraud, deceptive conduct exploiting rewards/events, inducing fake reviews or manipulated ratings</li>
+      <li>Repetitive spam, meaningless posts, or mass posting/comments using automation tools</li>
+      <li>Excessive promotion/ads unrelated to the Service, or recruitment for MLM/pyramid/investment scams</li>
+      <li>Indiscriminate redirection to external links (including phishing/malware) or hiding intent via shortened URLs</li>
+    </ol>
+
+    <h3>(6) Service Stability / Security Violations</h3>
+    <ol>
+      <li>Hacking attempts, exploiting vulnerabilities, generating abnormal traffic, or overloading the Service via crawling/scraping</li>
+      <li>Reverse engineering, attempting to analyze source code/security systems, or bypassing authentication</li>
+      <li>Unauthorized access (or attempts) to another person’s account</li>
+    </ol>
+
+    <h3>(7) Other Disruptive / Inappropriate Activities</h3>
+    <ol>
+      <li>Impersonating the Company, administrators, or others</li>
+      <li>Abusing the reporting feature (false reports, encouraging mass reporting)</li>
+      <li>Any act that violates laws/public order and morals, or that the Company reasonably deems inappropriate</li>
+    </ol>
+  </section>
+
+  <section>
+    <h2>Article 9 (Posting, Management, and Reporting of Content)</h2>
+    <ol>
+      <li>Members are responsible for the Content they post.</li>
+      <li>
+        The Company may delete/hide/restrict access to Content without prior notice if it reasonably determines that:
+        <ul>
+          <li>The Content violates applicable laws, these Terms, or the Operational Policy</li>
+          <li>The Content infringes the rights of others (copyright, portrait rights, personal information, etc.)</li>
+          <li>A report is received and urgent action is required</li>
+        </ul>
+      </li>
+      <li>Members may report inappropriate Content through the in-service reporting feature.</li>
+      <li>During the review process, the Company may review relevant materials within the necessary scope.</li>
+    </ol>
+  </section>
+
+  <section>
+    <h2>Article 10 (Restrictions and Sanctions)</h2>
+    <ol>
+      <li>
+        If a Member violates these Terms or the Operational Policy, the Company may take the following actions depending on severity:
+        <ul>
+          <li>Delete/hide Content or request modification</li>
+          <li>Warning</li>
+          <li>Temporary suspension</li>
+          <li>Permanent suspension (account restriction)</li>
+        </ul>
+      </li>
+      <li>In cases of repeated or serious violations (illegal content, personal information leaks, sexual exploitation, hacking, etc.), the Company may impose strong measures such as immediate permanent suspension.</li>
+    </ol>
+  </section>
+
+  <section>
+    <h2>Article 11 (Withdrawal and Data Handling: Anonymization Retention Policy)</h2>
+    <ol>
+      <li>Members may withdraw at any time through in-service features.</li>
+      <li>Upon withdrawal, the Company will delete or anonymize the Member’s personal information in accordance with the Privacy Policy.</li>
+      <li>
+        However, to preserve community continuity and records, activity records such as posts, comments, replies, likes, saves (scraps), and comment likes may not be deleted.
+        In such cases, the author display will be anonymized and shown as <strong>“Deleted User”</strong> or similar.
+      </li>
+      <li>Information required to be retained under applicable laws will be stored for the period prescribed by such laws.</li>
+    </ol>
+  </section>
+
+  <section>
+    <h2>Article 12 (Rights to Content and License Grant)</h2>
+    <ol>
+      <li>In principle, copyrights to Content posted by Members remain with the Member.</li>
+      <li>
+        Members grant the Company a free, non-exclusive, non-transferable, worldwide license to use the Content to the extent necessary to provide, operate, and improve the Service and to display Content within the Service, including:
+        <ul>
+          <li>Storing, reproducing, transmitting, displaying, and distributing</li>
+          <li>Technical processing (format conversion, capacity optimization, thumbnail generation, etc.)</li>
+        </ul>
+      </li>
+      <li>This license may remain valid within the scope of Article 11 even after the Member deletes the Content or withdraws from the Service.</li>
+      <li>The Company will not use “individual Content for external advertising/marketing” beyond in-service display without the Member’s explicit consent (except where Content posted with public visibility is shown within Service screens).</li>
+    </ol>
+  </section>
+
+  <section>
+    <h2>Article 13 (AI Camera Notice and Disclaimer)</h2>
+    <ol>
+      <li>AI Camera results (translations, explanations, recommendations, etc.) are for reference only, and the Company does not guarantee accuracy, completeness, or timeliness.</li>
+      <li>For matters requiring important judgment (allergies, medicines, medical, legal, safety, etc.), Members must verify separately, and the Company limits its liability to the extent permitted by law.</li>
+      <li>Members must ensure that images/text uploaded to the AI Camera do not include personal information or elements that infringe third-party rights.</li>
+    </ol>
+  </section>
+
+  <section>
+    <h2>Article 14 (Restriction and Suspension of the Service)</h2>
+    <p>The Company may temporarily suspend the Service in any of the following cases:</p>
+    <ul>
+      <li>Facility inspection/replacement/failure, communication outages, or other technical reasons</li>
+      <li>Force majeure events such as natural disasters or national emergencies</li>
+      <li>Any other case where the Company reasonably determines suspension is necessary</li>
+    </ul>
+    <p>Where possible, the Company will provide prior notice.</p>
+  </section>
+
+  <section>
+    <h2>Article 15 (Damages and Limitation of Liability)</h2>
+    <ol>
+      <li>If damages are caused to a Member due to the Company’s intent or gross negligence, the Company will be liable in accordance with applicable laws.</li>
+      <li>The Company does not intervene in disputes between Members or between a Member and a third party and is not liable for resulting damages (except where the Company is at fault).</li>
+      <li>For services provided free of charge, the Company may limit liability to the extent permitted by applicable laws.</li>
+    </ol>
+  </section>
+
+  <section>
+    <h2>Article 16 (Governing Law and Jurisdiction)</h2>
+    <ol>
+      <li>These Terms are governed by the laws of the Republic of Korea.</li>
+      <li>In the event of disputes related to the Service, the court having jurisdiction over the location of the Company’s head office shall have exclusive jurisdiction as the court of first instance.</li>
+    </ol>
+  </section>
+
+  <section>
+    <h2>Addendum</h2>
+    <p>These Terms take effect on <strong>2026-02-23</strong>.</p>
+  </section>
+
+  <section>
+    <h2>Company Information</h2>
+    <ul>
+      <li><strong>Service Name / Operator:</strong> KOIN / TEAM_KOIN</li>
+      <li><strong>Contact Email:</strong> <a href="mailto:team@koreainsider.kr">team@koreainsider.kr</a></li>
+    </ul>
+  </section>
+
+  <hr style="border: 0; border-top: 1px solid #e5e5e5; margin: 24px 0;" />
+
+  <p style="margin-bottom: 24px;">
+    <a href="/" style="text-decoration: none;">← Back to Home</a>
+  </p>
 </body>
 </html>
+```
