--- a/privacy/index.html
+++ b/privacy/index.html
@@ -1,29 +1,257 @@
 <!doctype html>
-<html lang="ko">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Privacy Policy - KOIN</title>
+  <meta name="description" content="KOIN Privacy Policy (Effective Date: 2026-02-23, Version v1.1)" />
 </head>
-<body style="font-family: system-ui; max-width: 820px; margin: 40px auto; line-height: 1.6;">
-  <h1>Privacy Policy</h1>
-  <p>Last updated: 2026-02-22</p>
+<body style="font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; max-width: 820px; margin: 40px auto; line-height: 1.6; padding: 0 16px;">
+  <header>
+    <h1 style="margin-bottom: 8px;">Privacy Policy</h1>
+    <p style="margin-top: 0; color: #555;">
+      Effective Date: <strong>2026-02-23</strong> · Version: <strong>v1.1</strong>
+    </p>
+  </header>
 
-  <h2>1. Data we collect</h2>
-  <p>When you sign in with Google, we may collect basic profile information such as your Google account identifier, email address (if provided), and profile name/photo (if provided).</p>
+  <hr style="border: 0; border-top: 1px solid #e5e5e5; margin: 24px 0;" />
 
-  <h2>2. How we use data</h2>
-  <p>We use this information to create your account, provide login functionality, and operate the KOIN service.</p>
+  <section>
+    <h2>1. Purpose of Processing Personal Information</h2>
+    <p>The Company processes personal information for the following purposes:</p>
+    <ol>
+      <li>Account management, including sign-up and login (Kakao/Google/Email)</li>
+      <li>Provision of Community/Curation services (uploading and displaying content such as posts, comments, and images)</li>
+      <li>Receiving and handling reports, enforcing operational policies, and restricting use where necessary</li>
+      <li>Responding to customer inquiries and handling disputes</li>
+      <li>Ensuring service stability (security, preventing fraudulent use, incident response)</li>
+      <li><strong>(Optional)</strong> Providing marketing information (email/push) — only if the user provides <strong>separate optional consent</strong></li>
+    </ol>
+  </section>
 
-  <h2>3. Sharing</h2>
-  <p>We do not sell your personal information. We may share data only when required by law or to provide the service.</p>
+  <section>
+    <h2>2. Data We Collect</h2>
+    <p>The Company collects the minimum personal information necessary to provide the Service.</p>
 
-  <h2>4. Retention & deletion</h2>
-  <p>We retain data as long as necessary to provide the service. You can request account deletion by contacting us.</p>
+    <h3>2.1 Collected Items, Methods, Purposes, and Retention</h3>
+    <div style="overflow-x: auto;">
+      <table style="width: 100%; border-collapse: collapse; min-width: 760px;">
+        <thead>
+          <tr>
+            <th style="text-align:left; border-bottom: 1px solid #ddd; padding: 10px;">Category</th>
+            <th style="text-align:left; border-bottom: 1px solid #ddd; padding: 10px;">Collected Items</th>
+            <th style="text-align:left; border-bottom: 1px solid #ddd; padding: 10px;">Collection Method</th>
+            <th style="text-align:left; border-bottom: 1px solid #ddd; padding: 10px;">Purpose</th>
+            <th style="text-align:left; border-bottom: 1px solid #ddd; padding: 10px;">Retention Period</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Sign-up/Login (Required)</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Email address, social login identifier (Kakao/Google), nickname</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">User input or provided via social login</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">User identification, service provision, account management</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Deleted upon withdrawal (except where retention is required by law)</td>
+          </tr>
+          <tr>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Profile (Optional)</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Profile image</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Uploaded by user</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Displaying profile</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Deleted upon withdrawal (however, if included within posts, anonymization policy may apply)</td>
+          </tr>
+          <tr>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Community/Curation</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Posts/comments/replies content, uploaded images, activity records (likes/saves/comment likes, etc.)</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Created/uploaded by user</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Operating community features, handling reports</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Upon withdrawal, author-identifying info is deleted/anonymized; content may remain after anonymization</td>
+          </tr>
+          <tr>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Customer Support (Optional)</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Reply email, inquiry details</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">User input</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Responding to inquiries and disputes</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Up to 3 years after purpose is fulfilled</td>
+          </tr>
+          <tr>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Service Logs (Required)</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Access records, IP address, device/browser information, error logs</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Automatically collected</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Security, fraud prevention, incident response</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">6 months</td>
+          </tr>
+          <tr>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Marketing (Optional)</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Email, push token (device identifier)</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">User consent and settings</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Event/notice/benefit announcements</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Until consent is withdrawn or account is deleted</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 
-  <h2>5. Contact</h2>
-  <p>Email: <a href="mailto:team@koreainsider.kr">team@koreainsider.kr</a></p>
+    <p style="margin-top: 12px; color: #555;">
+      <strong>Notice:</strong> Please be careful not to include personal information (e.g., phone numbers, addresses) of yourself or others in posts or images.
+      Content containing personal information may be deleted or made private.
+    </p>
+  </section>
 
-  <p><a href="/">Back to Home</a></p>
+  <section>
+    <h2>3. Children Under 14</h2>
+    <p>
+      The Company does not allow registration by children under the age of 14.
+      If it is confirmed that personal information of a child under 14 has been collected, the Company will delete it without delay.
+    </p>
+  </section>
+
+  <section>
+    <h2>4. Retention and Processing Period</h2>
+    <p>
+      The Company processes and retains personal information within the period required by applicable laws or the retention period agreed to at the time of collection.
+      In principle, personal information is destroyed without delay once the purpose of processing is achieved.
+    </p>
+    <p>Exceptions include:</p>
+    <ul>
+      <li>When retention is required under applicable laws</li>
+      <li>When a minimum retention period is necessary to resolve disputes or respond to customer inquiries</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>5. Sharing (Provision to Third Parties)</h2>
+    <p>
+      In principle, the Company does not provide users’ personal information to third parties.
+      However, personal information may be provided when required by law or with the user’s separate consent.
+    </p>
+  </section>
+
+  <section>
+    <h2>6. Service Providers (Outsourcing)</h2>
+    <p>To provide services smoothly, the Company may outsource certain personal information processing tasks as follows:</p>
+
+    <div style="overflow-x: auto;">
+      <table style="width: 100%; border-collapse: collapse; min-width: 760px;">
+        <thead>
+          <tr>
+            <th style="text-align:left; border-bottom: 1px solid #ddd; padding: 10px;">Service Provider</th>
+            <th style="text-align:left; border-bottom: 1px solid #ddd; padding: 10px;">Outsourced Task</th>
+            <th style="text-align:left; border-bottom: 1px solid #ddd; padding: 10px;">Personal Information Items</th>
+            <th style="text-align:left; border-bottom: 1px solid #ddd; padding: 10px;">Storage/Processing Location</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Amazon Web Services (S3)</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Image/file storage</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Uploaded images/files and related metadata</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Republic of Korea (Seoul) ap-northeast-2</td>
+          </tr>
+          <tr>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Google Cloud Storage (GCS)</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Image/file storage</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Uploaded images/files and related metadata</td>
+            <td style="border-bottom: 1px solid #eee; padding: 10px;">Service configuration region (subject to operating region)</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <p style="margin-top: 12px; color: #555;">
+      The Company may migrate storage to its own DAS in the future. In such case, any changes to outsourcing status and processing methods will be reflected in this Policy and notified.
+    </p>
+    <p style="color: #555;">
+      If analytics/error-tracking tools are introduced, the Company will update this Policy to specify the provider/items/purpose/retention period and notify users accordingly.
+    </p>
+  </section>
+
+  <section>
+    <h2>7. Overseas Transfer</h2>
+    <p>
+      The Company operates its servers in the Republic of Korea. However, depending on the operating policies of social login providers (Kakao/Google)
+      and cloud service providers, some information may be processed outside of Korea.
+    </p>
+    <p>
+      If an overseas transfer occurs or transfer details (country/items) become specific, the Company will, in accordance with applicable laws,
+      clearly notify users of the transfer country, items, purpose, retention period, and how to refuse the transfer, and will obtain separate consent if required.
+    </p>
+  </section>
+
+  <section>
+    <h2>8. Destruction of Personal Information</h2>
+    <p>The Company destroys personal information without delay when the retention period expires or the purpose of processing is achieved.</p>
+    <ol>
+      <li><strong>Procedure:</strong> Occurrence of destruction reason → internal review and approval → destruction carried out</li>
+      <li>
+        <strong>Method:</strong>
+        <ul>
+          <li><strong>Electronic files:</strong> permanently deleted in a non-recoverable manner</li>
+          <li><strong>Printed materials:</strong> shredded or incinerated</li>
+        </ul>
+      </li>
+    </ol>
+  </section>
+
+  <section>
+    <h2>9. Your Rights and How to Exercise Them</h2>
+    <p>Users may exercise the following rights at any time:</p>
+    <ol>
+      <li>Request access to personal information</li>
+      <li>Request correction or deletion of personal information</li>
+      <li>Request suspension of processing of personal information</li>
+    </ol>
+    <p>
+      These rights may be exercised through in-service settings or by contacting the Company using the contact information below.
+      The Company will take action without delay in accordance with applicable laws.
+    </p>
+  </section>
+
+  <section>
+    <h2>10. Security Measures</h2>
+    <p>The Company takes the following measures to ensure the security of personal information:</p>
+    <ul>
+      <li>Managing access rights and applying the principle of least privilege</li>
+      <li>Encrypting personal information and sensitive data (where feasible)</li>
+      <li>Storing access records and preventing tampering/forgery</li>
+      <li>Security updates and vulnerability response</li>
+      <li>Establishing internal management plans and providing training (where feasible)</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>11. Privacy Officer &amp; Contact</h2>
+    <ul>
+      <li><strong>Privacy Officer:</strong> Sunghyuk Yang / Team Lead</li>
+      <li><strong>Contact Email:</strong> <a href="mailto:team@koreainsider.kr">team@koreainsider.kr</a></li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>12. Changes to This Policy</h2>
+    <p>
+      This Privacy Policy may be amended due to changes in applicable laws, service changes, or Company policy changes.
+      In such cases, the Company will notify users through in-service announcements or other appropriate methods.
+    </p>
+  </section>
+
+  <section>
+    <h2>Addendum</h2>
+    <p>This Policy takes effect on <strong>2026-02-23</strong>.</p>
+  </section>
+
+  <section>
+    <h2>Company Information</h2>
+    <ul>
+      <li><strong>Service Name / Operator:</strong> KOIN / TEAM_KOIN</li>
+      <li><strong>Contact Email:</strong> <a href="mailto:team@koreainsider.kr">team@koreainsider.kr</a></li>
+    </ul>
+  </section>
+
+  <hr style="border: 0; border-top: 1px solid #e5e5e5; margin: 24px 0;" />
+
+  <p style="margin-bottom: 24px;">
+    <a href="/" style="text-decoration: none;">← Back to Home</a>
+  </p>
 </body>
 </html>
