--- a/index.html
+++ b/index.html
@@ -4,15 +4,166 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>KOIN (Korea Insider)</title>
+  <meta name="description" content="한국 방문/거주 외국인을 위한 한국 생활 길라잡이 플랫폼 KOIN (Korea Insider)" />
 </head>
-<body style="font-family: system-ui; max-width: 820px; margin: 40px auto; line-height: 1.6;">
-  <h1>KOIN (Korea Insider)</h1>
-  <p>한국 방문/거주 외국인을 위한 한국 생활 길라잡이 플랫폼</p>
-  <p>Contact: <a href="mailto:team@koreainsider.kr">team@koreainsider.kr</a></p>
-  <h3>Links</h3>
-  <ul>
-    <li><a href="/privacy/">Privacy Policy</a></li>
-    <li><a href="/terms/">Terms of Service</a></li>
-  </ul>
+<body style="font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; max-width: 980px; margin: 40px auto; line-height: 1.6; padding: 0 16px;">
+
+  <!-- Top bar -->
+  <header style="display:flex; align-items:center; justify-content:space-between; gap:16px;">
+    <div style="display:flex; align-items:center; gap:12px;">
+      <div aria-hidden="true" style="width:44px; height:44px; border-radius:12px; background: linear-gradient(135deg, #111827 0%, #4f46e5 55%, #22c55e 100%); box-shadow: 0 10px 24px rgba(0,0,0,.12);"></div>
+      <div>
+        <h1 style="margin:0; font-size: 26px; letter-spacing: -0.02em;">KOIN <span style="color:#555; font-weight:600;">(Korea Insider)</span></h1>
+        <p style="margin:4px 0 0; color:#555;">한국 방문/거주 외국인을 위한 한국 생활 길라잡이 플랫폼</p>
+      </div>
+    </div>
+
+    <nav style="display:flex; gap:10px; flex-wrap:wrap; justify-content:flex-end;">
+      <a href="/privacy/" style="text-decoration:none; padding:8px 12px; border:1px solid #e5e5e5; border-radius:12px; color:#111; background:#fff;">
+        Privacy
+      </a>
+      <a href="/terms/" style="text-decoration:none; padding:8px 12px; border:1px solid #e5e5e5; border-radius:12px; color:#111; background:#fff;">
+        Terms
+      </a>
+      <a href="mailto:team@koreainsider.kr" style="text-decoration:none; padding:8px 12px; border:1px solid #111827; border-radius:12px; color:#fff; background:#111827;">
+        Contact
+      </a>
+    </nav>
+  </header>
+
+  <hr style="border:0; border-top:1px solid #eee; margin: 22px 0;" />
+
+  <!-- Hero -->
+  <section style="border:1px solid #eee; border-radius:18px; padding:22px; background: linear-gradient(180deg, #ffffff 0%, #f7f7ff 100%); box-shadow: 0 10px 30px rgba(0,0,0,.06);">
+    <div style="display:flex; gap:22px; flex-wrap:wrap; align-items:flex-start; justify-content:space-between;">
+      <div style="flex: 1 1 520px; min-width: 280px;">
+        <h2 style="margin:0 0 8px; font-size: 34px; letter-spacing: -0.03em; line-height:1.15;">
+          Korea 생활이 <span style="background:#111827; color:#fff; padding:2px 10px; border-radius:999px;">한 번에</span><br />
+          정리되는 플랫폼, KOIN
+        </h2>
+        <p style="margin: 0 0 14px; color:#444; font-size: 16px;">
+          커뮤니티 · 큐레이션 · AI 카메라로, 외국인이 한국에서 “정보 찾기/번역/소통”을 더 쉽고 빠르게 할 수 있도록 돕습니다.
+        </p>
+
+        <div style="display:flex; gap:10px; flex-wrap:wrap; margin-top: 14px;">
+          <a href="#features" style="text-decoration:none; padding:10px 14px; border-radius:12px; background:#4f46e5; color:#fff; border:1px solid #4f46e5;">
+            주요 기능 보기
+          </a>
+          <a href="#how" style="text-decoration:none; padding:10px 14px; border-radius:12px; background:#fff; color:#111; border:1px solid #e5e5e5;">
+            사용 흐름
+          </a>
+          <a href="mailto:team@koreainsider.kr?subject=KOIN%20Inquiry" style="text-decoration:none; padding:10px 14px; border-radius:12px; background:#111827; color:#fff; border:1px solid #111827;">
+            제휴/문의하기
+          </a>
+        </div>
+
+        <p style="margin: 14px 0 0; color:#6b7280; font-size: 13px;">
+          Contact: <a href="mailto:team@koreainsider.kr" style="color:#4f46e5; text-decoration:none;">team@koreainsider.kr</a>
+        </p>
+      </div>
+
+      <!-- Right side card -->
+      <aside style="flex: 0 1 320px; min-width: 260px;">
+        <div style="border:1px solid #eee; border-radius:16px; padding:16px; background:#fff;">
+          <div style="display:flex; align-items:center; justify-content:space-between;">
+            <strong style="font-size: 14px;">Quick Links</strong>
+            <span style="font-size: 12px; color:#6b7280;">Docs</span>
+          </div>
+          <ul style="margin: 10px 0 0; padding-left: 18px;">
+            <li style="margin: 6px 0;"><a href="/privacy/" style="color:#111; text-decoration:none;">Privacy Policy</a></li>
+            <li style="margin: 6px 0;"><a href="/terms/" style="color:#111; text-decoration:none;">Terms of Service</a></li>
+          </ul>
+
+          <div style="margin-top: 14px; padding: 12px; border-radius: 14px; background: #f8fafc; border:1px solid #eef2ff;">
+            <div style="font-size: 12px; color:#6b7280; margin-bottom: 6px;">Status</div>
+            <div style="display:flex; align-items:center; gap:8px;">
+              <span aria-hidden="true" style="width:10px; height:10px; border-radius:999px; background:#22c55e;"></span>
+              <span style="font-weight:600;">Online</span>
+              <span style="color:#6b7280; font-size:12px;">(Static site)</span>
+            </div>
+          </div>
+        </div>
+      </aside>
+    </div>
+  </section>
+
+  <!-- Features -->
+  <section id="features" style="margin-top: 26px;">
+    <h2 style="margin:0 0 10px; font-size: 22px;">주요 기능</h2>
+
+    <div style="display:grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 12px;">
+      <div style="border:1px solid #eee; border-radius:16px; padding:16px; background:#fff;">
+        <div style="font-size: 20px;">💬</div>
+        <h3 style="margin:8px 0 6px; font-size: 16px;">Community</h3>
+        <p style="margin:0; color:#555;">게시글/댓글/대댓글/좋아요/스크랩으로 외국인끼리 부담 없이 정보 공유.</p>
+      </div>
+
+      <div style="border:1px solid #eee; border-radius:16px; padding:16px; background:#fff;">
+        <div style="font-size: 20px;">🗺️</div>
+        <h3 style="margin:8px 0 6px; font-size: 16px;">Curation</h3>
+        <p style="margin:0; color:#555;">테마별 카드뉴스/가이드로 “지금 필요한 정보”를 빠르게 탐색.</p>
+      </div>
+
+      <div style="border:1px solid #eee; border-radius:16px; padding:16px; background:#fff;">
+        <div style="font-size: 20px;">📸</div>
+        <h3 style="margin:8px 0 6px; font-size: 16px;">AI Camera</h3>
+        <p style="margin:0; color:#555;">메뉴판/라벨/안내문을 찍으면 번역·설명·핵심 정보를 바로 제공.</p>
+      </div>
+
+      <div style="border:1px solid #eee; border-radius:16px; padding:16px; background:#fff;">
+        <div style="font-size: 20px;">🛡️</div>
+        <h3 style="margin:8px 0 6px; font-size: 16px;">Safety & Trust</h3>
+        <p style="margin:0; color:#555;">신고/제재 운영정책 기반으로 커뮤니티 품질을 관리.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- How it works -->
+  <section id="how" style="margin-top: 26px;">
+    <h2 style="margin:0 0 10px; font-size: 22px;">사용 흐름</h2>
+    <div style="border:1px solid #eee; border-radius:16px; padding:16px; background:#fff;">
+      <ol style="margin: 0; padding-left: 18px;">
+        <li style="margin: 8px 0;">로그인 (Kakao/Google/Email)</li>
+        <li style="margin: 8px 0;">큐레이션에서 추천 가이드 확인</li>
+        <li style="margin: 8px 0;">커뮤니티에서 질문/답변/후기 공유</li>
+        <li style="margin: 8px 0;">AI 카메라로 즉시 번역/설명 확인</li>
+      </ol>
+    </div>
+  </section>
+
+  <!-- Legal -->
+  <section style="margin-top: 26px;">
+    <h2 style="margin:0 0 10px; font-size: 22px;">Legal</h2>
+    <div style="display:flex; gap:12px; flex-wrap:wrap;">
+      <a href="/privacy/" style="text-decoration:none; padding:12px 14px; border-radius:14px; background:#fff; border:1px solid #e5e5e5; color:#111;">
+        Privacy Policy →
+      </a>
+      <a href="/terms/" style="text-decoration:none; padding:12px 14px; border-radius:14px; background:#fff; border:1px solid #e5e5e5; color:#111;">
+        Terms of Service →
+      </a>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer style="margin-top: 28px; padding-top: 18px; border-top: 1px solid #eee; color:#6b7280; font-size: 13px;">
+    <div style="display:flex; justify-content:space-between; gap:12px; flex-wrap:wrap;">
+      <div>
+        <div><strong style="color:#111;">KOIN / TEAM_KOIN</strong></div>
+        <div>Contact: <a href="mailto:team@koreainsider.kr" style="color:#4f46e5; text-decoration:none;">team@koreainsider.kr</a></div>
+      </div>
+      <div style="text-align:right;">
+        <div>© <span id="y"></span> KOIN. All rights reserved.</div>
+        <div style="margin-top:4px;">
+          <a href="/privacy/" style="color:#6b7280; text-decoration:none;">Privacy</a>
+          <span style="margin: 0 8px;">·</span>
+          <a href="/terms/" style="color:#6b7280; text-decoration:none;">Terms</a>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <script>
+    document.getElementById('y').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
