--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
 <!-- NAV -->
 <nav id="main-nav">
   <a href="#" class="nav-logo">
-    <img src="assets/koin-logo.jpg" alt="KOIN Logo" class="nav-logo-img" />
+    <img src="assets/koin-logo-.jpg" alt="KOIN Logo" class="nav-logo-img" />
     <span class="nav-logo-mark">KOIN</span>
     <span class="nav-logo-sub">Korea Insider</span>
   </a>
@@ -824,7 +824,7 @@
   <div class="footer-inner">
     <div>
       <div class="footer-brand">
-        <img src="assets/koin-logo.jpg" alt="KOIN" class="footer-brand-logo-img" />
+        <img src="assets/koin-logo-.jpg" alt="KOIN" class="footer-brand-logo-img" />
         <span class="footer-brand-name">KOIN</span>
       </div>
       <p class="footer-brand-desc">Korea Insider — 한국 방문/거주 외국인을 위한 한국 생활 길라잡이 플랫폼.</p>
