LAST index.html

--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
         <strong>KOIN is the only app that addresses every stage</strong> — planning, exploring,
         and daily living — with tools built specifically for the foreign experience in Korea.
       </p>
-      <p class="prop-quote">"K-oin은 한국 여행/거주에 필수불가결한 어플리케이션이다."</p>
+      <p class="prop-quote">"K-oin은 한국 여행/거주에 필수불가결한 어플리케이션"</p>
       <a href="#download" class="btn-primary"><span>Download KOIN Free</span></a>
     </div>
     <div class="prop-stats reveal" style="transition-delay:0.2s">
