--- a/index.html
+++ b/index.html
@@ -903,8 +903,8 @@
         <p>General & Partnership<br /><a href="/cdn-cgi/l/email-protection#a9ddccc8c4e9c2c6dbccc8c0c7dac0cdccdb87c2db"><span class="__cf_email__" data-cfemail="f480919599b49f9b8691959d9a879d909186da9f86">[email&#160;protected]</span></a></p>
         <br />
         <p>
-          <a href="#" style="color:var(--muted);text-decoration:none;">Privacy Policy</a> &nbsp;·&nbsp;
-          <a href="#" style="color:var(--muted);text-decoration:none;">Terms of Service</a>
+          <a href="/privacy/" style="color:var(--muted);text-decoration:none;">Privacy Policy</a> &nbsp;·&nbsp;
+          <a href="/terms/" style="color:var(--muted);text-decoration:none;">Terms of Service</a>
         </p>
       </div>
     </div>
@@ -912,8 +912,8 @@
   <div class="footer-bottom">
     <span class="footer-copy">© KOIN / TEAM_KOIN. All rights reserved.</span>
     <div class="footer-legal">
-      <a href="#">Privacy Policy</a>
-      <a href="#">Terms of Service</a>
+      <a href="/privacy/">Privacy Policy</a>
+      <a href="/terms/">Terms of Service</a>
     </div>
   </div>
 </footer>
