Final index.html

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
 <!-- NAV -->
 <nav id="main-nav">
   <a href="#" class="nav-logo">
-    <img src="assets/koin-logo.png" alt="KOIN Logo" class="nav-logo-img" />
+    <img src="assets/koin-logo-.png" alt="KOIN Logo" class="nav-logo-img" />
     <span class="nav-logo-mark">KOIN</span>
     <span class="nav-logo-sub">Korea Insider</span>
   </a>
