LAST index.html

--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
     <div class="stat-item reveal"><span class="stat-num">3</span><span class="stat-label">Core Features</span></div>
     <div class="stat-item reveal"><span class="stat-num">AI</span><span class="stat-label">Multilingual Translation</span></div>
     <div class="stat-item reveal"><span class="stat-num">∞</span><span class="stat-label">Community Insights</span></div>
-    <div class="stat-item reveal"><span class="stat-num">1</span><span class="stat-label">App, All You Need</span></div>
+    <div class="stat-item reveal"><span class="stat-num">One App</span><span class="stat-label">All You Need</span></div>
   </div>
 </div>
 
@@ -599,7 +599,7 @@
 <div id="features" class="features-intro">
   <div class="section-label reveal" style="justify-content:center">핵심 기능 · Core Features</div>
   <h2 class="section-title reveal">One app for the entire<br /><em>Korea experience.</em></h2>
-  <p class="section-desc reveal" style="transition-delay:0.2s">Planning a trip, settling in, or navigating daily life — KOIN has three powerful features that cover every moment of your Korea journey.</p>
+  <p class="section-desc reveal" style="transition-delay:0.2s">Planning a trip, Settling in, or Navigating daily life — KOIN has three powerful features that cover every moment of your Korea journey.</p>
 </div>
 
 <!-- ── FEATURE 01: KURATION ── -->
@@ -751,7 +751,7 @@
         <span class="adv-icon">⚡</span>
         <h3 class="adv-title">Real-Time Solutions</h3>
         <span class="adv-title-kr">실시간 문제 해결</span>
-        <p class="adv-desc">No waiting, no Googling, no language barrier panic. AI Camera solves <strong>food, administrative, and daily life</strong> problems the instant you point your phone at them.</p>
+        <p class="adv-desc">No waiting, No Googling, No language barrier panic. AI Camera solves <strong>food, administrative, and daily life</strong> problems the instant you point your phone at them.</p>
       </div>
       <div class="adv-card">
         <span class="adv-num">03</span>
