--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@
         <img src="assets/koin-logo.png" alt="KOIN" class="footer-brand-logo-img" />
         <span class="footer-brand-name">KOIN</span>
       </div>
-      <p class="footer-brand-desc">Korea Insider — 한국 방문/거주 외국인을 위한 한국 생활 길라잡이 플랫폼.</p>
+      <p class="footer-brand-desc">Korea Insider — 한국 방문/거주 외국인을 위한 한국 생활 길라잡이 플랫폼 </p>
     </div>
     <div>
       <div class="footer-col-title">Features</div>
