FINAL index.html

--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
       </div>
       <div class="hero-phones">
         <div class="phone-mock phone-mock-2">
-          <img src="assets/community.png" alt="Community" />
+          <img src="assets/community-.png" alt="Community" />
         </div>
         <div class="phone-mock phone-mock-1">
           <img src="assets/kuration.png" alt="Kuration" />
@@ -650,7 +650,7 @@
     <div class="showcase-phone reveal" style="direction:ltr">
       <div class="showcase-phone-wrap">
         <div class="showcase-phone-frame">
-          <img src="assets/community.png" alt="Community Feature" />
+          <img src="assets/community-.png" alt="Community Feature" />
         </div>
         <span class="showcase-badge-2">실시간 커뮤니티</span>
         <div class="showcase-phone-glow"></div>
